<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fundo_claro"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="24dp"
    tools:context=".controller.MainActivity">

    <TextView
        android:id="@+id/textoTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:gravity="center"
        android:text="@string/titulo_painel"
        android:textColor="@color/verde_hogwarts"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/botaoPersonagem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/opcao_personagem" />

    <Button
        android:id="@+id/botaoProfessor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/opcao_professor" />

    <Button
        android:id="@+id/botaoEstudantes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/opcao_estudantes" />

    <Button
        android:id="@+id/botaoFeiticos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/opcao_feiticos" />

    <Button
        android:id="@+id/botaoSair"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/opcao_sair" />

</LinearLayout>
